--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,6 @@
 # ===================================================================
 
 # -------------------------------------------------------------------
-# 0. 大语言模型配置
-# -------------------------------------------------------------------
-
-llm_config.json
-
-# -------------------------------------------------------------------
 # 1. 字节编译文件 / 优化文件 / DLL 文件
 # -------------------------------------------------------------------
 __pycache__/
@@ -23,22 +17,22 @@ __pycache__/
 # 2. 分发 / 打包
 # -------------------------------------------------------------------
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
+# build/
+# develop-eggs/
+# dist/
+# downloads/
 eggs/
 .eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
+# lib/
+# lib64/
+# parts/
+# sdist/
+# var/
 wheels/
 pip-wheel-metadata/
 share/python-wheels/
 *.egg-info/
-.installed.cfg
+# .installed.cfg
 *.egg
 MANIFEST
 
@@ -67,7 +61,7 @@ coverage.xml
 *.py,cover
 .hypothesis/
 .pytest_cache/
-pytestdebug.log
+# pytestdebug.log
 
 # -------------------------------------------------------------------
 # 5. 虚拟环境（重要：包含敏感配置）
@@ -115,6 +109,7 @@ venv.bak/
 # -------------------------------------------------------------------
 # 7. 环境配置（敏感信息，绝不提交）
 # -------------------------------------------------------------------
+llm_config.json
 .env
 .env.local
 .env.*.local
@@ -134,36 +129,36 @@ config.ini
 # -------------------------------------------------------------------
 # 8. 数据库
 # -------------------------------------------------------------------
-*.db
-*.sqlite
-*.sqlite3
-db.sqlite3-journal
+# *.db
+# *.sqlite
+# *.sqlite3
+# db.sqlite3-journal
 
 # -------------------------------------------------------------------
 # 9. 日志文件
 # -------------------------------------------------------------------
-*.log
-local_settings.py
-logs/
-log/
+# *.log
+# local_settings.py
+# logs/
+# log/
 
 # -------------------------------------------------------------------
 # 10. Django 项目特定
 # -------------------------------------------------------------------
 *.pot
 *.pyc
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-media/
-staticfiles/
-static/
-!static/.gitkeep
+# local_settings.py
+# db.sqlite3
+# db.sqlite3-journal
+# media/
+# staticfiles/
+# static/
+# !static/.gitkeep
 
 # -------------------------------------------------------------------
 # 11. Flask 项目特定
 # -------------------------------------------------------------------
-instance/
+# instance/
 .webassets-cache
 
 # -------------------------------------------------------------------
@@ -172,12 +167,12 @@ instance/
 # 数据集（大文件）
 dataset/
 datasets/
-*.csv
-*.tsv
-*.json.gz
-*.parquet
-*.h5
-*.hdf5
+# *.csv
+# *.tsv
+# *.json.gz
+# *.parquet
+# *.h5
+# *.hdf5
 
 # 模型文件
 *.pkl
@@ -188,7 +183,7 @@ datasets/
 *.ckpt
 *.onnx
 *.pb
-models/
+# models/
 checkpoints/
 
 # MLflow
@@ -197,8 +192,8 @@ mlruns/
 # -------------------------------------------------------------------
 # 13. 文档构建
 # -------------------------------------------------------------------
-docs/_build/
-site/
+# docs/_build/
+# site/
 
 # -------------------------------------------------------------------
 # 14. 其他工具
